...
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:background="@drawable/lang_title_back"
                    android:id="@+id/llFrom">

                    <TextView
                        android:id="@+id/tvFrom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Russian"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_gravity="center_horizontal|right"
                        android:textColor="@color/colorBlackText"
...
                    android:visibility="visible"
                    android:layout_centerInParent="true"
                    android:padding="8dp"
                    android:background="@drawable/lang_title_back" />

                <TextView
                    android:id="@+id/tvTo"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="English"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorBlackText"
...
            <RelativeLayout
                android:id="@+id/rlSwipeBlock"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ru.dedoxyribose.yandexschooltest.widget.SpecialEditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#0fff"
                    android:ems="10"
                    android:gravity="top"
                    android:imeOptions="actionDone"
...
                android:textColor="@color/colorBlackText"
                android:textSize="20sp"
                android:visibility="visible" />
        </ScrollView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvDefs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/scrollView2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="-5dp"></android.support.v7.widget.RecyclerView>
...
            </RelativeLayout>

            <ImageView
                android:enabled="false"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/ivFavorite"
                android:layout_marginTop="15dp"
                android:tint="@color/colorLightGray"
                android:src="@drawable/ic_bookmark_black_24dp" />

            <ru.dedoxyribose.yandexschooltest.widget.TintableImageView
                android:enabled="false"
...
