...
    <string name="AllLangs">All languages</string>
    <string name="DeterminedAutomatically">(Determined automatically)</string>
    <string name="UnableToDetermine">Unable to determine</string>
    <string name="sdk_key" translatable="false">6c24ffb1-7ba3-4170-bb61-24b2b9083229</string>
    <string name="UnableToSynthesizeSpeech">Unable to synthesize speech</string>
    <string name="TranslationCopied">Translation was copied to clipboard</string>
    <string name="History">History</string>
    <string name="Favorite">Favorite</string>
    <string name="Delete">Delete</string>
    <string name="WannaClearFavorite">Are you sure you want to clear favorite list?</string>
    <string name="WannaClearHistory">Are you sure you want to clear history?</string>
    <string name="Cancel">Cancel</string>
    <string name="Clear">Clear</string>
    <string name="ListIsEmpty">The list is empty</string>
...
