<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.MainActivity">


    <ru.dedoxyribose.yandexschooltest.widget.NonSwipeableViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/vpPages"
        android:layout_above="@+id/tvDivider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tvDivider"
        android:background="@color/colorLightGray"
        android:layout_above="@+id/tabPages" />

    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/tabPages"
        app:tabMaxWidth="0dp"
        app:tabGravity="fill"
        app:tabMode="fixed"/>

</RelativeLayout>
